--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,8 @@ flake8-pyproject = "^1.2.3"
 isort = "^5.13.2"
 mypy = "^1.7.1"
 djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.14.5"}
+setuptools = "^69.0.2"
+pillow = "^10.1.0"
 
 
 [build-system]
