Agrego openapi y redoc docs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,7 +58,9 @@
         "asgi",
         "backchallenge",
         "dotenv",
+        "Intuitivo",
         "klass",
+        "REDOC",
         "simplejwt"
     ],
 }
