--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,8 @@ mypy = "^1.7.1"
 djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.14.5"}
 setuptools = "^69.0.2"
 pillow = "^10.1.0"
+drf-spectacular = "^0.27.0"
+drf-spectacular-sidecar = "^2023.12.1"
 
 
 [build-system]
