--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ setuptools = "^69.0.2"
 pillow = "^10.1.0"
 drf-spectacular = "^0.27.0"
 drf-spectacular-sidecar = "^2023.12.1"
+django-cors-headers = "^4.3.1"
 
 
 [build-system]
