Agrego anotaciones. Arreglo bugs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
         "APIJSON",
         "asgi",
         "backchallenge",
+        "Btns",
         "dotenv",
         "Intuitivo",
         "klass",
